Adding RoutingServiceExample to C++ SDK examples for Android & iOS.  Buddy: Ian

--- a/ios/ios_src/Examples/CMakeLists.txt
+++ b/ios/ios_src/Examples/CMakeLists.txt
@@ -10,4 +10,5 @@ set(sources ${sources} ${currsources})
 source_group(\\ios_src\\Examples FILES ${currsources})
 include(ios_src/Examples/RouteMatching/CMakeLists.txt)
 include(ios_src/Examples/RouteSimulation/CMakeLists.txt)
+include(ios_src/Examples/RoutingService/CMakeLists.txt)
 endif(${IOS})
