#VR-138 #comment VRCardboard example added. Buddy: Ali

--- a/src/Examples/CMakeLists.txt
+++ b/src/Examples/CMakeLists.txt
@@ -57,6 +57,7 @@ include(../src/Examples/StencilArea/CMakeLists.txt)
 include(../src/Examples/ToggleTraffic/CMakeLists.txt)
 include(../src/Examples/TrafficCongestion/CMakeLists.txt)
 include(../src/Examples/UI/CMakeLists.txt)
+include(../src/Examples/VRCardboard/CMakeLists.txt)
 include(../src/Examples/WebRequest/CMakeLists.txt)
-
 include(../src/Examples/Interiors/CMakeLists.txt)
+include(../src/Examples/SkyboxModule/CMakeLists.txt)
