#VR-138 #comment Code review changes added to remove IsVRExample() from ExampleApp so that it shouldn't know about which example is running. Buddy: Sohail

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -28,7 +28,7 @@
                   android:label="EegeoMobileSdkHarness"
                   android:configChanges="orientation|keyboardHidden|screenSize"
               	  android:launchMode="singleInstance"
-              	  android:hardwareAccelerated="false">
+              	  android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
