--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ set(currsources
 set(sources ${sources} ${currsources})
 source_group(\\src\\ FILES ${currsources})
 include(../src/Examples/CMakeLists.txt)
+include(../src/Modules/CMakeLists.txt)
