#VR-138 #comment Code review change to remove implementation of methods from IExample.h is added. Buddy: Qaiser

--- a/src/Examples/CMakeLists.txt
+++ b/src/Examples/CMakeLists.txt
@@ -12,6 +12,7 @@ set(currsources
   ../src/Examples/IExampleControllerView.h
   ../src/Examples/IExampleFactory.h
   ../src/Examples/ScreenPropertiesProvider.h
+  ../src/Examples/ExampleHandler.h
 )
 set(sources ${sources} ${currsources})
 source_group(\\src\\Examples FILES ${currsources})
