Add example for route selection
Initial example for route selection.
RouteSelectionHelper may move to SDK after API review.
Buddy: John

--- a/src/Examples/CMakeLists.txt
+++ b/src/Examples/CMakeLists.txt
@@ -46,6 +46,7 @@ include(../src/Examples/RenderToTexture/CMakeLists.txt)
 include(../src/Examples/ResourceSpatialQuery/CMakeLists.txt)
 include(../src/Examples/RouteDrawing/CMakeLists.txt)
 include(../src/Examples/RouteMatching/CMakeLists.txt)
+include(../src/Examples/RouteSelection/CMakeLists.txt)
 include(../src/Examples/RouteSimulation/CMakeLists.txt)
 include(../src/Examples/RouteSimulationAnimation/CMakeLists.txt)
 include(../src/Examples/RouteThicknessPolicy/CMakeLists.txt)
