Fix For: MPLY-8052, Enabling 3D screenspace drawing of routes. Buddy: John

--- a/src/Examples/CMakeLists.txt
+++ b/src/Examples/CMakeLists.txt
@@ -20,6 +20,7 @@ include(../src/Examples/BuildingHighlight/CMakeLists.txt)
 include(../src/Examples/BuildingSelection/CMakeLists.txt)
 include(../src/Examples/CameraSpline/CMakeLists.txt)
 include(../src/Examples/CameraTransition/CMakeLists.txt)
+include(../src/Examples/Common/CMakeLists.txt)
 include(../src/Examples/ControlCityThemes/CMakeLists.txt)
 include(../src/Examples/Data/CMakeLists.txt)
 include(../src/Examples/DebugPrimitiveRendering/CMakeLists.txt)
